# DualViewPlugin

./: CMakeLists.txt  PluginInfo.json  conanfile.py
.github/workflows/: build.yml
res/: dual_chart.qrc
res/dual_chart/: d3-bipartite.js  test_bipartite.html
res/shaders/: EmbeddingLines.frag  EmbeddingLines.geom  EmbeddingLines.vert  PointPlot.frag  PointPlot.vert
src/: ChartWidget.cpp  ChartWidget.h  DualViewPlugin.cpp  DualViewPlugin.h  DualViewPlugin.json  EmbeddingLinesWidget.cpp  EmbeddingLinesWidget.h  MyShader.cpp  MyShader.h  ScatterplotWidget.cpp  ScatterplotWidget.h
src/Actions/: ColoringActionA.cpp  ColoringActionA.h  ColoringActionB.cpp  ColoringActionB.h  DimensionSelectionAction.cpp  EmbeddingAPointPlotAction.cpp  EmbeddingAPointPlotAction.h  EmbeddingBPointPlotAction.cpp  EmbeddingBPointPlotAction.h  EnrichmentAction.cpp  EnrichmentAction.h  EnrichmentSettingsAction.cpp  EnrichmentSettingsAction.h  GenePickerAction.cpp  GenePickerAction.h  LineSettingsAction.cpp  LineSettingsAction.h  LoadedDatasetsAction.cpp  LoadedDatasetsAction.h  MyOptionAction.cpp  MyOptionAction.h  NavigationAction.cpp  PointPlotAction.cpp  PointPlotAction.h  PointPlotActionB.cpp  PointPlotActionB.h  ScalarAction.cpp  ScalarSourceAction.cpp  ScalarSourceAction.h  SelectionAction.cpp  SelectionAction.h  SelectionActionB.cpp  SelectionActionB.h  SettingsAction.cpp  SettingsAction.h
src/Compute/: Computation.cpp  Computation.h  EnrichmentAnalysis.cpp  EnrichmentAnalysis.h  SampleScopeProcessor.cpp  SampleScopeProcessor.h
